--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="map_height">300dp</dimen>
+
+    <!--Login dimens-->
+    <dimen name="login_logo_height">150dp</dimen>
 </resources>
