Se corrigen algunos errores de interfaz en la actividad de cuenta

--- a/app/src/main/res/layout/content_account.xml
+++ b/app/src/main/res/layout/content_account.xml
@@ -13,41 +13,38 @@
         android:id="@+id/btnCorreo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="74dp"
-        android:layout_marginEnd="43dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/extCorreoUsuario"
+        app:layout_constraintTop_toBottomOf="@+id/btnNombre"
         app:srcCompat="@android:drawable/ic_menu_edit" />
 
     <EditText
         android:id="@+id/extCorreoUsuario"
         android:layout_width="251dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="67dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
         android:text="correo@gmail.com"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toStartOf="@+id/btnCorreo"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/extNombreUsuario"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/extNombreUsuario" />
 
     <ImageView
         android:id="@+id/iv_logo_login2"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/login_logo_height"
-        android:layout_marginBottom="24dp"
+        android:layout_height="150dp"
         android:contentDescription="@string/login_logo_description"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:src="@drawable/ic_person_24dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnNombre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -55,14 +52,15 @@
     <EditText
         android:id="@+id/extNombreUsuario"
         android:layout_width="251dp"
-        android:layout_height="59dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:enabled="false"
         android:inputType="textPersonName"
         android:text="Brandon Oviedo Sánchez"
-        app:layout_constraintBottom_toTopOf="@+id/extCorreoUsuario"
+        app:layout_constraintEnd_toStartOf="@+id/btnNombre"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo_login2" />
 
@@ -70,11 +68,9 @@
         android:id="@+id/btnNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnCorreo"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/extNombreUsuario"
         app:layout_constraintTop_toBottomOf="@+id/iv_logo_login2"
@@ -82,40 +78,36 @@
 
     <Button
         android:id="@+id/btnGuardar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:layout_marginEnd="303dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="32dp"
         android:text="Guardar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtModalidad" />
 
     <TextView
         android:id="@+id/txtModalidad"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="301dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="31dp"
         android:text="Modalidad"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/extCorreoUsuario" />
