Actividad de tarifas

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,7 +20,7 @@
         <org.osmdroid.views.MapView
             android:id="@+id/openmapview"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/map_height" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
