--- a/app/src/main/res/layout/content_rate.xml
+++ b/app/src/main/res/layout/content_rate.xml
@@ -8,48 +8,17 @@
     tools:context="org.roosterbus.RateActivity"
     tools:showIn="@layout/activity_rate">
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="274dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/txtRuta1"
-            android:layout_width="144dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Poás - Alajuela"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/txtColones1"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="₡590"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
-    </LinearLayout>
-
     <TextView
         android:id="@+id/txtTarifaTotal"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
         android:text="Tarifa total:"
-        android:textSize="30dp"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,58 +26,88 @@
         android:id="@+id/txtTotalColones"
         android:layout_width="wrap_content"
         android:layout_height="51dp"
-        android:layout_marginTop="109dp"
+        android:layout_marginTop="32dp"
         android:text="₡930"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="35dp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTarifaTotal" />
 
     <TextView
         android:id="@+id/txtTarifasIndividuales"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="232dp"
-        android:text="Tarifas individuales:"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
         android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="311dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:gravity="center"
+        android:text="Tarifas individuales:"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        app:layout_constraintTop_toBottomOf="@+id/txtTotalColones" />
 
-        <TextView
-            android:id="@+id/txtRuta2"
-            android:layout_width="149dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Alajuela - Santa Bárbara"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
+    <TextView
+        android:id="@+id/txtRuta1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Poás - Alajuela"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/txtColones1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTarifasIndividuales" />
 
-        <TextView
-            android:id="@+id/txtColones2"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="₡340"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="20dp" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/txtColones1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="₡590"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txtRuta1"
+        app:layout_constraintTop_toBottomOf="@+id/txtTarifasIndividuales" />
+
+    <TextView
+        android:id="@+id/txtRuta2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="Alajuela - Santa Bárbara"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/txtRuta1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtRuta1" />
+
+    <TextView
+        android:id="@+id/txtColones2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="₡340"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/txtColones1"
+        app:layout_constraintTop_toBottomOf="@+id/txtColones1" />
 
 </android.support.constraint.ConstraintLayout>
