--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,13 @@
 <resources>
     <color name="colorPrimary">#070c33</color>
     <color name="colorPrimaryDark">#3a4656</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3a4656</color>
 
     <!--Login colors-->
     <color name="colorButtonsBackground">#070c33</color>
-    <color name="colorButtonsText">#fff</color>
+    <color name="colorButtonsText">#ffffff</color>
     <color name="colorButtonRegister">#86b1e9</color>
     <color name="colorText">#fff</color>
+    <color name="colorCardText">#000</color>
 
 </resources>
