Se agrega el marcador de la parada de autobus

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,10 @@
             android:title="Ver tarifa diaria"
             />
         <item
+            android:id="@+id/nav_routes"
+            android:icon="@drawable/ic_routes"
+            android:title="Rutas a tomar en el período" />
+        <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout"
             android:title="Cerrar sesión" />
