Agregar curso versión completa

--- a/app/src/main/res/layout/activity_add_courses.xml
+++ b/app/src/main/res/layout/activity_add_courses.xml
@@ -20,7 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_add_courses" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_add_courses" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_add_course"
