--- a/app/src/main/res/layout/item_course.xml
+++ b/app/src/main/res/layout/item_course.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview_courses"
     android:layout_width="match_parent"
@@ -7,9 +8,9 @@
     android:layout_marginBottom="10dp"
     android:clickable="true"
     android:focusable="true"
+    style="@style/CardView.Light"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    app:cardBackgroundColor="@color/colorButtonsText"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp">
 
